--- a/index.html
+++ b/index.html
@@ -37,13 +37,11 @@
         <section class="work">
             <h2>Course Work</h2>
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>1- Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+                <li>2- Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+                <li>3- Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
             </ul>
-
         </section>
-
         <section class="country">
             <h2>Cordoba, Argentina</h2>
             <figure class="city">
@@ -51,7 +49,6 @@
                 <figcaption>Cordoba, Cordoba Argentina</figcaption>
             </figure>
         </section>
-
         <section class="certificate">
             <h2>Web and Computer Programming Certificate</h2>
             <div class="filters">
@@ -61,7 +58,6 @@
                     <li id="filter-wdd">WDD</li>
                 </ul>    
             </div>
-
             <div class="subjects">
                 <ul id="subjects">
                 </ul>
@@ -74,10 +70,9 @@
             </div>
             <h3>Total Credits Required: <span id="credits">0</span> </h3>
         </section>
-
     </main>
     <footer>
-        <p>©️ <span id="currentyear"></span> - Martin Detlefsen - Argentina</p>
+        <p>©️ <span id="currentyear"></span> - 🤖🤖 Martin Detlefsen - Argentina 🤖🤖  <img src="images/bandera-argentina.webp" alt="Argentina, Cordoba" width="20px" height="15px"/></p>
         <p> Last Modified <span id="lastModified"></span> </p>
     </footer
   </body>
