--- a/index.html
+++ b/index.html
@@ -7,12 +7,17 @@
     <title>WDD 231 - Web Frontend Development I - Martin Detlefsen</title>
     <meta name="robots" content="index, follow">
     <meta name="author" content="Martin Detlefsen">
+    <meta property="og:title" content="WDD 231 Course Home Page - Student Martin Detlefsen">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://mdetlefsen77.github.io/wdd231/images/Argentina_Cordoba_Cathedral.webp">
+    <meta property="og:url" content="https://mdetlefsen77.github.io/wdd231/">
     <meta name="keywords" content="WDD 231, Web Frontend Development, BYU-Idaho, Martin Detlefsen, frontend development, UX, accessibility, performance optimization, web programming">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/base-large.css">
+    <link rel="icon" href="favicon.ico">
     <script src="scripts/base.js" defer></script>
   </head>
   <body>
@@ -22,7 +27,7 @@
             <h1>Martin Detlefsen</h1>
         </div>
         <div>
-            <button type="button" id="menu" aria-label="Menu button"> </button>
+            <button type="button" id="menu" aria-label="Menu button"></button>
             <nav>
                 <ul class="navigation">
                     <li><a href="#" class="active">Home</a></li>
