--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -40,7 +40,7 @@
         <div class="header_right">
             <a id="menu" href="#"></a>
             <nav class="navigation">
-              <a href="home.html">Home</a>
+                <a href="home.html">Home</a>
               <a href="directory.html" class="active">Directory</a>
               <a href="join.html">Join</a>
               <a href="discover.html">Discover</a>
@@ -71,7 +71,7 @@
         <section class="social-media">
           <a href="https://youtube.com"
             ><img
-              src="/chamber/images/youtube.svg"
+              src="./images/youtube.svg"
               loading="lazy"
               alt="Youtube Icon"
               width="50px"
@@ -79,7 +79,7 @@
           /></a>
           <a href="https://twitter.com"
             ><img
-              src="/chamber/images/twitter.svg"
+              src="./images/twitter.svg"
               loading="lazy"
               alt="Twitter Icon"
               width="50px"
@@ -87,7 +87,7 @@
           /></a>
           <a href="https://linkedin.com"
             ><img
-              src="/chamber/images/linkedin.svg"
+              src="./images/linkedin.svg"
               loading="lazy"
               alt="LinkedIn Icon"
               width="50px"
