--- a/chamber/home.html
+++ b/chamber/home.html
@@ -13,6 +13,16 @@
     </title>
     <meta name="robots" content="index, follow" />
     <meta name="author" content="Martin Detlefsen" />
+    <meta
+      property="og:title"
+      content="WDD 231 Course Home Page - Student Martin Detlefsen"
+    />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:image"
+      content="https://mdetlefsen77.github.io/wdd231/chamber/images/icon.png"
+    />
+    <meta property="og:url" content="https://mdetlefsen77.github.io/wdd231/chamber/home.html" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -21,19 +31,26 @@
     />
     <link rel="stylesheet" href="./styles/reset.css" />
     <link rel="stylesheet" href="./styles/normalize.css" />
-    <link rel="stylesheet" href="./styles/directory.css" />
-    <link rel="stylesheet" href="./styles/directory-short.css" />
-    <link rel="stylesheet" href="./styles/directory-large.css" />
+    <link rel="stylesheet" href="./styles/chamber-short.css" />
+    <link rel="stylesheet" href="./styles/chamber-large.css" />
     <link rel="icon" href="./favicon.ico" />
-    <script src="scripts/directory.js" defer></script>
+    <script src="./scripts/members-utils.js" type="module" defer></script>
+    <script src="./scripts/members-sum.js" type="module" defer></script>
     <script src="scripts/footerDetails.js" defer></script>
     <script src="scripts/hamButton.js" defer></script>
+    <script src="scripts/activePage.js" defer></script>
+    <script src="scripts/weatherApi.js" defer></script>
   </head>
+
   <body>
     <div class="container">
-
       <header>
-        <img src="images/icon.png" alt="Cordoba Chamber of Commerce" width="120" loading="lazy">
+        <img
+          src="images/icon.png"
+          alt="Cordoba Chamber of Commerce"
+          width="120"
+          loading="lazy"
+        />
         <div class="header_left">
           <h1>Cordoba</h1>
           <p>Chamber of Commerce</p>
@@ -41,69 +58,101 @@
         <div class="header_right">
           <a id="menu" href="#"></a>
           <nav class="navigation">
-              <a href="home.html">Home</a>
-              <a href="directory.html" class="active">Directory</a>
-              <a href="join.html">Join</a>
-              <a href="discover.html">Discover</a>
-            </nav>
+            <a href="home.html">Home</a>
+            <a href="directory.html" class="active">Directory</a>
+            <a href="join.html">Join</a>
+            <a href="discover.html">Discover</a>
+          </nav>
+        </div>
+      </header>
+      <main main class="main-container">
+        <div class="hero">
+          <picture>
+            <source
+              media="(min-width: 1000px)"
+              srcset="images/hero-large.webp"
+            />
+            <source
+              media="(min-width: 640px)"
+              srcset="images/hero-medium.webp"
+            />
+            <img
+              src="images/hero-small.webp"
+              alt="Waves crashing on the shore"
+              width="400"
+              height="300"
+            />
+          </picture>
+          <a href="join.html">Join Us</a>
+        </div>
+
+        <h2 class="home-title">Home</h2>
+
+        <div class="events-weather">
+          <div>
+            <h3>Events</h3>
+            <div>
+              <p>There's no events planned yet. Please, come back later</p>
+            </div>
           </div>
-          <section class="hero">
-            <div class="carousel">
-              <img src="image1.jpg" alt="Business meeting image 1" />
-        <img src="image2.jpg" alt="Business networking event image 2" />
-        <img src="image3.jpg" alt="View of Córdoba image 3" />
-      </div>
-      <div class="hero-content">
-        <h2>Empowering Córdoba's Business Community</h2>
-        <p>
-          Join the Chamber to access exclusive resources, connect with local
-          businesses, and grow your network.
-        </p>
-        <a href="#join" class="cta-button">Join Us Today</a>
-      </div>
-    </section>
-    <footer>
-      <section class="address-info">
-        <p><b>Cordoba Chamber of Commerce</b></p>
-        <p>10 Rue De La Paix</p>
-        <p>Cordoba, Street 444</p>
-        <p>info@cordobacc.org</p>
-        <p>(0351) 888-0802</p>
-      </section>
-      <section class="social-media">
-        <a href="https://youtube.com"
-        ><img
-        src="/chamber/images/youtube.svg"
-        loading="lazy"
-        alt="Youtube Icon"
-        width="50px"
-        height="50px"
-        /></a>
-        <a href="https://twitter.com"
-        ><img
-        src="/chamber/images/twitter.svg"
-        loading="lazy"
-        alt="Twitter Icon"
-        width="50px"
-        height="50px"
-        /></a>
-        <a href="https://linkedin.com"
-        ><img
-        src="/chamber/images/linkedin.svg"
-        loading="lazy"
-        alt="LinkedIn Icon"
-        width="50px"
-        height="50px"
-        /></a>
-      </section>
-      <section class="student-info">
-        <p>WDD231 Class Project</p>
-        <p>Martin Detlefsen</p>
-        <p>©️ <span id="currentyear"></span> Cordoba Chamber of Commerce</p>
-        <p>Last Modified <span id="lastModified"></span></p>
-      </section>
-    </footer>
-  
-  </div>
+
+          <div>
+            <h3>Current Weather</h3>
+            <div id="current-weather">
+              <p>No data available</p>
+            </div>
+          </div>
+
+          <div>
+            <h3>Weather Cast</h3>
+            <div id="weather-cast">
+              <p>No data available</p>
+            </div>
+          </div>
+        </div>
+        <div id="business-sum"></div>
+      </main>
+      <footer>
+        <section class="address-info">
+          <p><b>Cordoba Chamber of Commerce</b></p>
+          <p>10 Rue De La Paix</p>
+          <p>Cordoba, Street 444</p>
+          <p>info@cordobacc.org</p>
+          <p>(0351) 888-0802</p>
+        </section>
+        <section class="social-media">
+          <a href="https://youtube.com"
+            ><img
+              src="/chamber/images/youtube.svg"
+              loading="lazy"
+              alt="Youtube Icon"
+              width="50px"
+              height="50px"
+          /></a>
+          <a href="https://twitter.com"
+            ><img
+              src="/chamber/images/twitter.svg"
+              loading="lazy"
+              alt="Twitter Icon"
+              width="50px"
+              height="50px"
+          /></a>
+          <a href="https://linkedin.com"
+            ><img
+              src="/chamber/images/linkedin.svg"
+              loading="lazy"
+              alt="LinkedIn Icon"
+              width="50px"
+              height="50px"
+          /></a>
+        </section>
+        <section class="student-info">
+          <p>WDD231 Class Project</p>
+          <p>Martin Detlefsen</p>
+          <p>©️ <span id="currentyear"></span> Cordoba Chamber of Commerce</p>
+          <p>Last Modified <span id="lastModified"></span></p>
+        </section>
+      </footer>
+    </div>
   </body>
-  </html>
+</html>
