--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -22,7 +22,10 @@
       property="og:image"
       content="https://mdetlefsen77.github.io/wdd231/chamber/images/icon.png"
     />
-    <meta property="og:url" content="https://mdetlefsen77.github.io/wdd231/chamber/home.html" />
+    <meta
+      property="og:url"
+      content="https://mdetlefsen77.github.io/wdd231/chamber/home.html"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -41,7 +44,6 @@
     <script src="scripts/activePage.js" defer></script>
     <script src="scripts/weatherApi.js" defer></script>
   </head>
-
   <body>
     <div class="container">
       <header>
@@ -58,60 +60,14 @@
         <div class="header_right">
           <a id="menu" href="#"></a>
           <nav class="navigation">
-            <a href="home.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="directory.html" class="active">Directory</a>
             <a href="join.html">Join</a>
             <a href="discover.html">Discover</a>
           </nav>
         </div>
       </header>
-      <main main class="main-container">
-        <div class="hero">
-          <picture>
-            <source
-              media="(min-width: 1000px)"
-              srcset="images/hero-large.webp"
-            />
-            <source
-              media="(min-width: 640px)"
-              srcset="images/hero-medium.webp"
-            />
-            <img
-              src="images/hero-small.webp"
-              alt="Waves crashing on the shore"
-              width="400"
-              height="300"
-            />
-          </picture>
-          <a href="join.html">Join Us</a>
-        </div>
-
-        <h2 class="home-title">Home</h2>
-
-        <div class="events-weather">
-          <div>
-            <h3>Events</h3>
-            <div>
-              <p>There's no events planned yet. Please, come back later</p>
-            </div>
-          </div>
-
-          <div>
-            <h3>Current Weather</h3>
-            <div id="current-weather">
-              <p>No data available</p>
-            </div>
-          </div>
-
-          <div>
-            <h3>Weather Cast</h3>
-            <div id="weather-cast">
-              <p>No data available</p>
-            </div>
-          </div>
-        </div>
-        <div id="business-sum"></div>
-      </main>
+      <main></main>
       <footer>
         <section class="address-info">
           <p><b>Cordoba Chamber of Commerce</b></p>
@@ -123,7 +79,7 @@
         <section class="social-media">
           <a href="https://youtube.com"
             ><img
-              src="/chamber/images/youtube.svg"
+              src="./images/youtube.svg"
               loading="lazy"
               alt="Youtube Icon"
               width="50px"
@@ -131,7 +87,7 @@
           /></a>
           <a href="https://twitter.com"
             ><img
-              src="/chamber/images/twitter.svg"
+              src="./images/twitter.svg"
               loading="lazy"
               alt="Twitter Icon"
               width="50px"
@@ -139,7 +95,7 @@
           /></a>
           <a href="https://linkedin.com"
             ><img
-              src="/chamber/images/linkedin.svg"
+              src="./images/linkedin.svg"
               loading="lazy"
               alt="LinkedIn Icon"
               width="50px"
