--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -37,8 +37,8 @@
     <link rel="stylesheet" href="./styles/chamber-short.css" />
     <link rel="stylesheet" href="./styles/chamber-large.css" />
     <link rel="icon" href="./favicon.ico" />
-    <script src="./scripts/members-utils.js" type="module" defer></script>
-    <script src="./scripts/members-sum.js" type="module" defer></script>
+    <script src="./scripts/members-utils.js" type="module"></script>
+    <script src="./scripts/members-sum.js" type="module"></script>
     <script src="scripts/footerDetails.js" defer></script>
     <script src="scripts/hamButton.js" defer></script>
     <script src="scripts/activePage.js" defer></script>
