--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -37,8 +37,8 @@
     <link rel="stylesheet" href="./styles/chamber-short.css" />
     <link rel="stylesheet" href="./styles/chamber-large.css" />
     <link rel="icon" href="./favicon.ico" />
-    <script src="./scripts/members-utils.js" type="module" defer></script>
-    <script src="./scripts/members-card.js" type="module" defer></script>
+    <script src="./scripts/members-utils.js" type="module"></script>
+    <script src="./scripts/members-card.js" type="module"></script>
     <script src="scripts/footerDetails.js" defer></script>
     <script src="scripts/hamButton.js" defer></script>
     <script src="scripts/activePage.js" defer></script>
@@ -93,24 +93,24 @@
               src="./images/youtube.svg"
               loading="lazy"
               alt="Youtube Icon"
-              width="50px"
-              height="50px"
+              width="50"
+              height="50"
           /></a>
           <a href="https://twitter.com"
             ><img
               src="./images/twitter.svg"
               loading="lazy"
               alt="Twitter Icon"
-              width="50px"
-              height="50px"
+              width="50"
+              height="50"
           /></a>
           <a href="https://linkedin.com"
             ><img
               src="./images/linkedin.svg"
               loading="lazy"
               alt="LinkedIn Icon"
-              width="50px"
-              height="50px"
+              width="50"
+              height="50"
           /></a>
         </section>
         <section class="student-info">
