--- a/chamber/index.html
+++ b/chamber/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
@@ -17,12 +17,15 @@
       property="og:title"
       content="WDD 231 Course Home Page - Student Martin Detlefsen"
     />
-    <meta property="og:type" content="website" />
+    <meta property="og:type" content="website">
     <meta
       property="og:image"
       content="https://mdetlefsen77.github.io/wdd231/chamber/images/icon.png"
     />
-    <meta property="og:url" content="https://mdetlefsen77.github.io/wdd231/chamber/home.html" />
+    <meta
+      property="og:url"
+      content="https://mdetlefsen77.github.io/wdd231/chamber/home.html"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -34,8 +37,8 @@
     <link rel="stylesheet" href="./styles/chamber-short.css" />
     <link rel="stylesheet" href="./styles/chamber-large.css" />
     <link rel="icon" href="./favicon.ico" />
-    <script src="./scripts/members-utils.js" type="module" ></script>
-    <script src="./scripts/members-sum.js" type="module" ></script>
+    <script src="./scripts/members-utils.js" type="module"></script>
+    <script src="./scripts/members-sum.js" type="module"></script>
     <script src="scripts/footerDetails.js" defer></script>
     <script src="scripts/hamButton.js" defer></script>
     <script src="scripts/activePage.js" defer></script>
@@ -122,29 +125,29 @@
         </section>
         <section class="social-media">
           <a href="https://youtube.com"
-          ><img
-            src="./images/youtube.svg"
-            loading="lazy"
-            alt="Youtube Icon"
-            width="50"
-            height="50"
-        /></a>
-        <a href="https://twitter.com"
-          ><img
-            src="./images/twitter.svg"
-            loading="lazy"
-            alt="Twitter Icon"
-            width="50"
-            height="50"
-        /></a>
-        <a href="https://linkedin.com"
-          ><img
-            src="./images/linkedin.svg"
-            loading="lazy"
-            alt="LinkedIn Icon"
-            width="50"
-            height="50"
-        /></a>
+            ><img
+              src="./images/youtube.svg"
+              loading="lazy"
+              alt="Youtube Icon"
+              width="50"
+              height="50"
+          /></a>
+          <a href="https://twitter.com"
+            ><img
+              src="./images/twitter.svg"
+              loading="lazy"
+              alt="Twitter Icon"
+              width="50"
+              height="50"
+          /></a>
+          <a href="https://linkedin.com"
+            ><img
+              src="./images/linkedin.svg"
+              loading="lazy"
+              alt="LinkedIn Icon"
+              width="50"
+              height="50"
+          /></a>
         </section>
         <section class="student-info">
           <p>WDD231 Class Project</p>
