--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
@@ -17,7 +17,7 @@
       property="og:title"
       content="WDD 231 Course Home Page - Student Martin Detlefsen"
     />
-    <meta property="og:type" content="website" />
+    <meta property="og:type" content="website">
     <meta
       property="og:image"
       content="https://mdetlefsen77.github.io/wdd231/chamber/images/icon.png"
