--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -36,13 +36,12 @@
     <link rel="stylesheet" href="./styles/normalize.css" />
     <link rel="stylesheet" href="./styles/chamber-short.css" />
     <link rel="stylesheet" href="./styles/chamber-large.css" />
+    <link rel="stylesheet" href="./styles/thankyou.css" />
     <link rel="icon" href="./favicon.ico" />
-    <script src="./scripts/members-utils.js" type="module"></script>
-    <script src="./scripts/members-card.js" type="module"></script>
     <script src="scripts/footerDetails.js" defer></script>
     <script src="scripts/hamButton.js" defer></script>
     <script src="scripts/activePage.js" defer></script>
-    <script src="scripts/weatherApi.js" defer></script>
+    <script src="scripts/formData.js" type="module"></script>
   </head>
   <body>
     <div class="container">
@@ -67,19 +66,16 @@
           </nav>
         </div>
       </header>
-
-      <main class="main-container">
-        <div class="menu">
-          <button id="grid">
-            <img src="images/grid_Icon.webp" alt="Grid View" width="70" />
-          </button>
-          <button id="list">
-            <img src="images/list_Icon.webp" alt="List View" width="70" />
-          </button>
-        </div>
-        <div id="cards" class="grid"></div>
+      <main>
+        <h2>Thank You for Joining Us!</h2>
+        <p class="thanks">
+          We appreciate your interest in becoming a member of Sucre's Chamber of
+          Commerce. Your application has been received, and we are thrilled to
+          welcome you to our community. Below, you’ll find a summary of your
+          application details:
+        </p>
+        <section id="results" aria-labelledby="application-summary"></section>
       </main>
-
       <footer>
         <section class="address-info">
           <p><b>Cordoba Chamber of Commerce</b></p>
@@ -94,24 +90,24 @@
               src="./images/youtube.svg"
               loading="lazy"
               alt="Youtube Icon"
-              width="50"
-              height="50"
+              width="50px"
+              height="50px"
           /></a>
           <a href="https://twitter.com"
             ><img
               src="./images/twitter.svg"
               loading="lazy"
               alt="Twitter Icon"
-              width="50"
-              height="50"
+              width="50px"
+              height="50px"
           /></a>
           <a href="https://linkedin.com"
             ><img
               src="./images/linkedin.svg"
               loading="lazy"
               alt="LinkedIn Icon"
-              width="50"
-              height="50"
+              width="50px"
+              height="50px"
           /></a>
         </section>
         <section class="student-info">
