fix Audit corrections

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -69,12 +69,10 @@
         </div>
       </header>
       <main class="join-page">
-        <!-- Membership Form -->
         <section class="join-form">
           <h2 class="form-title">Join Us!</h2>
           <h3>Membership Application Form</h3>
           <form method="GET" action="thankyou.html">
-            <!-- First Name -->
             <fieldset>
               <legend>First Name <strong>*</strong></legend>
               <input
@@ -86,7 +84,6 @@
               />
             </fieldset>
 
-            <!-- Last Name -->
             <fieldset>
               <legend>Last Name <strong>*</strong></legend>
               <input
@@ -98,7 +95,6 @@
               />
             </fieldset>
 
-            <!-- Organizational Title -->
             <fieldset>
               <legend>Organizational Title</legend>
               <input
@@ -111,7 +107,6 @@
               />
             </fieldset>
 
-            <!-- Email -->
             <fieldset>
               <legend>Email Address <strong>*</strong></legend>
               <input
@@ -124,7 +119,6 @@
               />
             </fieldset>
 
-            <!-- Cell Phone -->
             <fieldset>
               <legend>Cell Phone <strong>*</strong></legend>
               <input
@@ -137,7 +131,6 @@
               />
             </fieldset>
 
-            <!-- Membership Level -->
             <fieldset>
               <legend>Membership Level <strong>*</strong></legend>
               <label
@@ -164,10 +157,10 @@
               </label>
            </fieldset>
 
-              <small></small>(<strong>*</strong>) Required field</small>
+              <small>(<strong>*</strong>) Required field</small>
               <input type="hidden" name="hiddendate" id="today">
-            <!-- Submit -->
-            <input type="submit" value="Apply for a Membership" />
+      
+            <input type="submit" value="Apply for a Membership">
           </form>
         </section>
         <section id="membership-levels">
@@ -190,24 +183,24 @@
               src="./images/youtube.svg"
               loading="lazy"
               alt="Youtube Icon"
-              width="50px"
-              height="50px"
+              width="50"
+              height="50"
           /></a>
           <a href="https://twitter.com"
             ><img
               src="./images/twitter.svg"
               loading="lazy"
               alt="Twitter Icon"
-              width="50px"
-              height="50px"
+              width="50"
+              height="50"
           /></a>
           <a href="https://linkedin.com"
             ><img
               src="./images/linkedin.svg"
               loading="lazy"
               alt="LinkedIn Icon"
-              width="50px"
-              height="50px"
+              width="50"
+              height="50"
           /></a>
         </section>
         <section class="student-info">
