--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -90,24 +90,24 @@
               src="./images/youtube.svg"
               loading="lazy"
               alt="Youtube Icon"
-              width="50px"
-              height="50px"
+              width="50"
+              height="50"
           /></a>
           <a href="https://twitter.com"
             ><img
               src="./images/twitter.svg"
               loading="lazy"
               alt="Twitter Icon"
-              width="50px"
-              height="50px"
+              width="50"
+              height="50"
           /></a>
           <a href="https://linkedin.com"
             ><img
               src="./images/linkedin.svg"
               loading="lazy"
               alt="LinkedIn Icon"
-              width="50px"
-              height="50px"
+              width="50"
+              height="50"
           /></a>
         </section>
         <section class="student-info">
