include fix lazy loading in images

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -1,42 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
       content="The Córdoba Chamber of Commerce connects businesses in Córdoba, Argentina, providing support, networking, and resources to promote economic growth and community development. Discover initiatives, services, and events for entrepreneurs, businesses, and investors in Córdoba's thriving commercial landscape."
-    >
+    />
     <title>
       Córdoba Chamber of Commerce - Business Development & Networking in
       Argentina
     </title>
-    <meta name="robots" content="index, follow" >
-    <meta name="author" content="Martin Detlefsen" >
+    <meta name="robots" content="index, follow" />
+    <meta name="author" content="Martin Detlefsen" />
     <meta
       property="og:title"
       content="WDD 231 Course Home Page - Student Martin Detlefsen"
-    >
-    <meta property="og:type" content="website" >
+    />
+    <meta property="og:type" content="website" />
     <meta
       property="og:image"
       content="https://mdetlefsen77.github.io/wdd231/chamber/images/icon.png"
-    >
+    />
     <meta
       property="og:url"
       content="https://mdetlefsen77.github.io/wdd231/chamber/home.html"
-    >
-    <link rel="preconnect" href="https://fonts.googleapis.com" >
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin >
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
-    >
-    <link rel="stylesheet" href="./styles/reset.css" >
-    <link rel="stylesheet" href="./styles/normalize.css" >
-    <link rel="stylesheet" href="./styles/chamber-short.css" >
-    <link rel="stylesheet" href="./styles/chamber-large.css" >
-    <link rel="icon" href="./favicon.ico" >
+    />
+    <link rel="stylesheet" href="./styles/reset.css" />
+    <link rel="stylesheet" href="./styles/normalize.css" />
+    <link rel="stylesheet" href="./styles/chamber-short.css" />
+    <link rel="stylesheet" href="./styles/chamber-large.css" />
+    <link rel="icon" href="./favicon.ico" />
     <script src="scripts/footerDetails.js" defer></script>
     <script src="scripts/hamButton.js" defer></script>
     <script src="scripts/activePage.js" defer></script>
@@ -73,14 +73,14 @@
           <div class="visit-message"></div>
           <div class="flag-picture">
             <img
-            src="images/cordoba-flag.webp"
-            alt="Cordoba Flag"
-            width="300"
-            height="200"
-            loading="lazy"
-          />
+              src="images/cordoba-flag.webp"
+              alt="Cordoba Flag"
+              width="300"
+              height="200"
+              loading="lazy"
+            />
           </div>
-          
+
           <div class="demographics">
             <h3>Demographic Information of Córdoba</h3>
             <ul>
@@ -187,31 +187,37 @@
               class="lazy-load"
               src="images/audrius-sutkus-N2KIkLWuwvQ-unsplash.webp"
               alt="Local Attraction 1"
+              loading="lazy"
             />
             <img
               class="lazy-load"
               src="images/erik-mclean-ox72sUdwbEA-unsplash.webp"
               alt="Local Attraction 2"
+              loading="lazy"
             />
             <img
               class="lazy-load"
               src="images/international-student-navigator-australia-lKcmbML4Qv8-unsplash.webp"
               alt="Local Attraction 3"
+              loading="lazy"
             />
             <img
               class="lazy-load"
               src="images/taro-ohtani-Dx2M7o6SnUE-unsplash.webp"
               alt="Local Attraction 4"
+              loading="lazy"
             />
             <img
               class="lazy-load"
               src="images/international-student-navigator-australia-oVsibQpPj1Y-unsplash.webp"
               alt="Local Attraction 5"
+              loading="lazy"
             />
             <img
               class="lazy-load"
               src="images/jeffrey-thumann-FK7EfvXMoMU-unsplash.webp"
               alt="Local Attraction 6"
+              loading="lazy"
             />
           </div>
         </section>
